# LatroWeb

./: .gitignore  CMakeLists.txt  LATRODECTUS.md  LICENSE  README.md  requirements.txt  start_honeypot.py
include/: callbacks.h  color_codes.hpp  common_macros.hpp  console_logger.hpp  logger.hpp  login_parser.hpp  ssh_server.h  tcp_client.hpp  tcp_server.hpp
src/: callbacks.cpp  console_logger.cpp  logger.cpp  login_parser.cpp  main.cpp  ssh_server.cpp  tcp_client.cpp  tcp_server.cpp
